Add 6 - Flexbox Alignment and Centering with justify-content

--- a/6 - Flexbox Alignment and Centering with justify-content/style.css
+++ b/6 - Flexbox Alignment and Centering with justify-content/style.css
@@ -163,7 +163,7 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 /* Some default styles to make each box visible */
 .box {
     color: white;
-    font-size: 100px;
+    font-size: 20px;
     text-align: center;
     text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.1);
     padding: 10px;
@@ -213,4 +213,7 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 /* We start writing out flexbox here. The above is just page setup */
 .container {
     display: flex;
+    min-height: 100vh;
+    justify-content: space-around;
+    flex-direction: column;
 }
